# snake-game

./: CMakeLists.txt  compile_commands.json
include/: food.hpp  snake.hpp
src/: food.cpp  main.cpp  snake.cpp
